<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Football Puzzler</string>
	<string name="description">Description for Football Puzzler.</string>
	<string name="settings">Settings</string>
	<string name="version">1.0</string>
	<string name="help">Help</string>
	<string name="help_text">Help menu for this game.</string>
	<string name="favorites">Favorites</string>
	<string name="about">About</string>
	<string name="about_text">Legal details about this game.</string>
	<string name="achievements">Top Scores</string>
	<string name="achievements_text">Checkout top scores.</string>
	<string name="blank"/>
	<string name="flag_table_col_name">Name</string>
	<string name="help_file_name">help.html</string>
	<string name="about_file_name">about.html</string>
	<string name="space">\u0020</string>
	<string name="score">0</string>
	<string name="score_text">Score:</string>
	<string name="times_up">Game Over</string>
	<string name="time">Time (mins)</string>
	<string name="new_game">New Game</string>
	<string name="resume">Resume</string>
	<string name="start">Start</string>
	<string name="ok">OK</string>
	<string name="close">Close</string>
	<string name="english">English</string>
	<string name="japanese">日本語</string>
	<string name="russian">русский</string>
	<string name="korean">한국인</string>
	<string name="language">Language</string>
	<string name="language_summary">This preference allows you to set the game language</string>
	<string-array name="language_list">
		<item>@string/english</item>
		<item>@string/japanese</item>
		<item>@string/russian</item>
		<item>@string/korean</item>
	</string-array>
	<string-array name="language_code">
		<item>en</item>
		<item>ja</item>
		<item>ru</item>
		<item>ko</item>
	</string-array>
</resources>
