<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:background="#000000">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="3dp"
        android:weightSum="1.0" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:gravity="center"
            android:text="@string/score_text"
            android:textColor="#F2F2F2"
            android:textSize="18sp" />
        <View
        	android:layout_width="2dp"
        	android:layout_height="match_parent"
        	android:background="#F2F2F2" />
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:textSize="18sp"
            android:textColor="#F2F2F2"
            android:gravity="center"
        	android:text="@string/time" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#F2F2F2" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="3dp"
        android:weightSum="1.0" >
		<TextView 
            android:id="@+id/r0c0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:gravity="center"
            android:text="@string/blank"
            android:textColor="#F2F2F2"
            android:textSize="18sp" />
		<View
     		android:layout_width="2dp"
        	android:layout_height="match_parent"
        	android:background="#F2F2F2" />
        <TextView 
            android:id="@+id/r0c1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:textSize="18sp"
            android:textColor="#F2F2F2"
            android:gravity="center"
          	android:text="@string/blank" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#F2F2F2" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="3dp"
        android:weightSum="1.0" >
		<TextView 
            android:id="@+id/r1c0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#F2F2F2"
          	android:text="@string/blank" />
		<View
     		android:layout_width="2dp"
        	android:layout_height="match_parent"
        	android:background="#F2F2F2" />
        <TextView 
            android:id="@+id/r1c1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:textSize="18sp"
            android:textColor="#F2F2F2"
            android:gravity="center"
          	android:text="@string/blank" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#F2F2F2" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="3dp"
        android:weightSum="1.0" >
		<TextView 
            android:id="@+id/r2c0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#F2F2F2"
          	android:text="@string/blank" />
		<View
     		android:layout_width="2dp"
        	android:layout_height="match_parent"
        	android:background="#F2F2F2" />
        <TextView 
            android:id="@+id/r2c1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:textSize="18sp"
            android:textColor="#F2F2F2"
            android:gravity="center"
          	android:text="@string/blank" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#F2F2F2" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="3dp"
        android:weightSum="1.0" >
		<TextView 
            android:id="@+id/r3c0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#F2F2F2"
          	android:text="@string/blank" />
		<View
     		android:layout_width="2dp"
        	android:layout_height="match_parent"
        	android:background="#F2F2F2" />
        <TextView 
            android:id="@+id/r3c1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:textSize="18sp"
            android:textColor="#F2F2F2"
            android:gravity="center"
          	android:text="@string/blank" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#F2F2F2" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="3dp"
        android:weightSum="1.0" >
		<TextView 
            android:id="@+id/r4c0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#F2F2F2"
          	android:text="@string/blank" />
		<View
     		android:layout_width="2dp"
        	android:layout_height="match_parent"
        	android:background="#F2F2F2" />
        <TextView 
            android:id="@+id/r4c1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:textSize="18sp"
            android:textColor="#F2F2F2"
            android:gravity="center"
          	android:text="@string/blank" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#F2F2F2" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="3dp"
        android:weightSum="1.0" >
		<TextView 
            android:id="@+id/r5c0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#F2F2F2"
          	android:text="@string/blank" />
		<View
     		android:layout_width="2dp"
        	android:layout_height="match_parent"
        	android:background="#F2F2F2" />
        <TextView 
            android:id="@+id/r5c1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:textSize="18sp"
            android:textColor="#F2F2F2"
            android:gravity="center"
          	android:text="@string/blank" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#F2F2F2" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="3dp"
        android:weightSum="1.0" >
		<TextView 
            android:id="@+id/r6c0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#F2F2F2"
          	android:text="@string/blank" />
		<View
     		android:layout_width="2dp"
        	android:layout_height="match_parent"
        	android:background="#F2F2F2" />
        <TextView 
            android:id="@+id/r6c1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:textSize="18sp"
            android:textColor="#F2F2F2"
            android:gravity="center"
          	android:text="@string/blank" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#F2F2F2" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="3dp"
        android:weightSum="1.0" >
		<TextView 
            android:id="@+id/r7c0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#F2F2F2"
          	android:text="@string/blank" />
		<View
     		android:layout_width="2dp"
        	android:layout_height="match_parent"
        	android:background="#F2F2F2" />
        <TextView 
            android:id="@+id/r7c1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:textSize="18sp"
            android:textColor="#F2F2F2"
            android:gravity="center"
          	android:text="@string/blank" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#F2F2F2" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="3dp"
        android:weightSum="1.0" >
		<TextView 
            android:id="@+id/r8c0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#F2F2F2"
          	android:text="@string/blank" />
		<View
     		android:layout_width="2dp"
        	android:layout_height="match_parent"
        	android:background="#F2F2F2" />
        <TextView 
            android:id="@+id/r8c1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:textSize="18sp"
            android:textColor="#F2F2F2"
            android:gravity="center"
          	android:text="@string/blank" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#F2F2F2" />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="3dp"
        android:weightSum="1.0" >
		<TextView 
            android:id="@+id/r9c0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="#F2F2F2"
          	android:text="@string/blank" />
		<View
     		android:layout_width="2dp"
        	android:layout_height="match_parent"
        	android:background="#F2F2F2" />
        <TextView 
            android:id="@+id/r9c1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:textSize="18sp"
            android:textColor="#F2F2F2"
            android:gravity="center"
          	android:text="@string/blank" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#F2F2F2" />
</LinearLayout>
